--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "classnames": "^2.2.5",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
+	"bootstrap": "^4.1.1",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4"
   },
